package com.sda.patterns.behavioral.iterator.ex1;

public interface SocialNetwork {
	SocialNetworkIterator iterator();
}
