package com.sda.patterns.behavioral.iterator.ex1;

public interface SocialNetworkIterator {

	boolean hasNext();

	Profile next();

}
